fixed media queries in main & bio section on mobile screen size, changed fontSize for animated text to show full text

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ section {
 
 .animated-text h3 {
   color: #4e9eff;
-  font-size: 3em;
+  font-size: 2.3em;
   font-weight: 700;
   line-height: 70px;
   letter-spacing: 1px;
@@ -727,7 +727,7 @@ body {
   opacity: 1;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 450px) {
   .main {
     display: block;
   }
@@ -740,6 +740,25 @@ body {
   .main .bio {
     display: block;
     width: 100%;
+    padding: 20px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 540px) {
+  .main {
+    display: block;
+  }
+  .main .content {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    margin: 5px 0;
+  }
+  .main .bio {
+    display: block;
+    text-align: center;
+    width: auto;
     padding: 20px;
     margin-top: 30px;
   }
